[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/theme/gdquest.theme" type="Theme" id=1]
[ext_resource path="res://settings/CreateNewCrewButton.gd" type="Script" id=2]
[ext_resource path="res://popups/NewGamePopup.gd" type="Script" id=3]
[ext_resource path="res://popups/CrewSetup.tscn" type="PackedScene" id=4]

[node name="NewGamePopup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupPanel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -301.5
margin_top = -140.5
margin_right = 301.5
margin_bottom = 140.5
rect_min_size = Vector2( 250, 250 )
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PopupPanel"]
margin_right = 603.0
margin_bottom = 281.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 578.0
margin_bottom = 256.0

[node name="Label" type="Label" parent="PopupPanel/MarginContainer/VBoxContainer"]
margin_right = 553.0
margin_bottom = 31.0
text = "New Game"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PopupPanel/MarginContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 553.0
margin_bottom = 94.0

[node name="Label" type="Label" parent="PopupPanel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 8.0
margin_right = 174.0
margin_bottom = 39.0
text = "Save Game ID:"

[node name="TextEdit" type="LineEdit" parent="PopupPanel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 190.0
margin_right = 553.0
margin_bottom = 47.0
size_flags_horizontal = 3
placeholder_text = "Save Game ID"
caret_blink = true
caret_blink_speed = 0.5

[node name="CreateNewSaveButton" type="Button" parent="PopupPanel/MarginContainer/VBoxContainer"]
margin_left = 151.0
margin_top = 110.0
margin_right = 401.0
margin_bottom = 141.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Create New Save"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
crew_setup_sceen = ExtResource( 4 )
on_start_screen = true

[node name="CancelButton" type="Button" parent="PopupPanel/MarginContainer/VBoxContainer"]
margin_left = 151.0
margin_top = 157.0
margin_right = 401.0
margin_bottom = 188.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_changed" from="PopupPanel/MarginContainer/VBoxContainer/HBoxContainer/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="PopupPanel/MarginContainer/VBoxContainer/CreateNewSaveButton" to="." method="_on_CreateNewCrewButton_pressed"]
[connection signal="pressed" from="PopupPanel/MarginContainer/VBoxContainer/CreateNewSaveButton" to="PopupPanel/MarginContainer/VBoxContainer/CreateNewSaveButton" method="_on_CreateNewCrewButton_pressed"]
[connection signal="pressed" from="PopupPanel/MarginContainer/VBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
